--- a/cpp01/ex00/Makefile
+++ b/cpp01/ex00/Makefile
@@ -1,9 +1,10 @@
+NAME = zombie
+
 CXX = c++
 CXXFLAGS = -Wall -Wextra -Werror -std=c++98
 
-SRCS = Account.cpp tests.cpp
+SRCS = main.cpp Zombie.cpp newZombie.cpp randomChump.cpp
 OBJS = $(SRCS:.cpp=.o)
-NAME = AccountTest
 
 all: $(NAME)
 
@@ -17,5 +18,3 @@ fclean: clean
 	rm -f $(NAME)
 
 re: fclean all
-
-.PHONY: all clean fclean re
